cli/src/snapshots/chronicle__test__delegation-2.snap
---
source: cli/src/main.rs
assertion_line: 507
expression: derived
---
[data.agentById]
id = 'http://blockchaintp.com/chronicle/ns#agent:responsible'
name = 'responsible'

[[data.agentById.actedOnBehalfOf]]
id = 'http://blockchaintp.com/chronicle/ns#agent:delegate'
