cli/src/snapshots/chronicle__test__primary_source.snap
---
source: cli/src/main.rs
assertion_line: 570
expression: created
---
[data.hadPrimarySource]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
