cli/src/snapshots/chronicle__test__quotation-2.snap
---
source: cli/src/main.rs
assertion_line: 667
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasQuotedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
