cli/src/snapshots/chronicle__test__revision-2.snap
---
source: cli/src/main.rs
assertion_line: 627
expression: derived
---
[data.entityById]
id = 'http://blockchaintp.com/chronicle/ns#entity:generated'
name = 'generated'

[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasRevisionOf]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
