cli/src/snapshots/chronicle__test__untyped_derivation-2.snap
---
source: cli/src/main.rs
assertion_line: 550
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
