cli/src/snapshots/chronicle__test__untyped_derivation.snap
---
source: cli/src/main.rs
assertion_line: 534
expression: created
---
[data.wasDerivedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
